--- a/trunk/HttpDownloader/pom.xml
+++ b/trunk/HttpDownloader/pom.xml
@@ -5,7 +5,7 @@
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.devtcg.tools</groupId>
    <artifactId>httpdownloader</artifactId>
-   <version>0.0.1-SNAPSHOT</version>
+   <version>0.0.1-20080718</version>
    <packaging>android:apk</packaging>
    <name>HTTP GET Tool for use on the HTC Vogue</name>
    <dependencies>
