Glance: ListView populates with contents and onListItemClick moves through the directory tree. Getting there, but not quite there yet :)

--- a/Glance/AndroidManifest.xml
+++ b/Glance/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.androidnerds.tools.Glance">
     <application>
-        <activity android:name=".Glance" android:label="Glance">
+        <activity android:name=".Glance" android:label="Glance" android:icon="@drawable/glance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
