--- a/Messages/AndroidManifest.xml
+++ b/Messages/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.androidnerds.tools.Messages">
+
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <application>
-	<uses-permission android:name="android.permission.READ_CONTACTS" />
-    	<uses-permission android:name="android.permission.WRITE_CONTACTS" />
-	<uses-permission android:name="android.permission.RECEIVE_SMS" />
-	
-	<receiver class="MessagesReceiver">
+	<receiver android:name="MessagesReceiver" class="MessagesReceiver">
 		<intent-filter>  
-			<action android:value="android.provider.Telephony.SMS_RECEIVED" />
+			<action android:name="android.provider.Telephony.SMS_RECEIVED" android:value="android.provider.Telephony.SMS_RECEIVED" />
 		</intent-filter>  
 	</receiver>
 	
