Messages: this commit has a lot of stuff in it. Very rough copy of the app, still needs lots of work but it is certainly a pleasure to use. :)

--- a/Messages/AndroidManifest.xml
+++ b/Messages/AndroidManifest.xml
@@ -11,7 +11,8 @@
 		</intent-filter>  
 	</receiver>
 	
-        <activity android:name=".Messages" android:label="Messages">
+	<activity android:name=".Conversations" android:label="@string/conversations"></activity>
+	<activity android:name=".Messages" android:label="Messages" android:icon="@drawable/icon">
 		<intent-filter>
                 	<action android:name="android.intent.action.MAIN" />
                 	<category android:name="android.intent.category.LAUNCHER" />
