--- a/trunk/Messages/AndroidManifest.xml
+++ b/trunk/Messages/AndroidManifest.xml
@@ -11,7 +11,8 @@
 		</intent-filter>  
 	</receiver>
 	
-        <activity android:name=".Messages" android:label="Messages">
+	<activity android:name=".Conversations" android:label="@string/conversations"></activity>
+	<activity android:name=".Messages" android:label="Messages" android:icon="@drawable/icon">
 		<intent-filter>
                 	<action android:name="android.intent.action.MAIN" />
                 	<category android:name="android.intent.category.LAUNCHER" />
