Scribble: added the ability to enter a file name from scratch and save a file without having to start Scribble through Glance.

--- a/Scribble/AndroidManifest.xml
+++ b/Scribble/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.androidnerds.tools.Scribble">
     <application>
-        <activity android:name=".Scribble" android:label="Scribble">
+	    <activity android:name=".Scribble" android:label="Scribble" android:icon="@drawable/scribble">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
