--- a/trunk/Messages/AndroidManifest.xml
+++ b/trunk/Messages/AndroidManifest.xml
@@ -12,7 +12,12 @@
 	</receiver>
 	
 	<activity android:name=".Conversations" android:label="@string/conversations"></activity>
-	<activity android:name=".CreateMessage" android:label="@string/createmessage"></activity>
+	<activity android:name=".CreateMessage" android:label="@string/createmessage">
+		<intent-filter>
+			<action android:name="android.intent.action.SENDTO" android:scheme="sms" />
+			<data android:name=" vnd.android.cursor.item/sms" android:mimeType="vnd.android.cursor.item/sms-chat" />
+		</intent-filter>
+	</activity>
 	<activity android:name=".Messages" android:label="Messages" android:icon="@drawable/icon">
 		<intent-filter>
                 	<action android:name="android.intent.action.MAIN" />
