--- a/Solitaire/AndroidManifest.xml
+++ b/Solitaire/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.devtcg.games.solitaire">
     <application android:icon="@drawable/icon">
-        <activity android:name=".game.Klondike" android:label="@string/app_name">
+        <activity android:name=".game.Klondike" android:label="@string/klondike">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
