--- a/trunk/HttpDownloader/AndroidManifest.xml
+++ b/trunk/HttpDownloader/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.devtcg.tools.httpdownloader">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application android:icon="@drawable/icon">
         <activity android:name=".Main" android:label="@string/app_name">
             <intent-filter>
