--- a/trunk/Logcat/AndroidManifest.xml
+++ b/trunk/Logcat/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.devtcg.tools.logcat">
+    
+    <uses-permission android:name="android.permission.READ_LOGS" />
+    
     <application android:icon="@drawable/icon">
         <activity android:name=".LogcatActivity" android:label="@string/app_name">
             <intent-filter>
