--- a/trunk/TestKeepAlive/AndroidManifest.xml
+++ b/trunk/TestKeepAlive/AndroidManifest.xml
@@ -22,7 +22,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon"
+                 android:label="@string/app_name"
+                 android:debuggable="true">
         <activity android:name=".TestKeepAlive"
                   android:label="@string/app_name">
             <intent-filter>
